# filepreviews-python

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
filepreviews/: __init__.py  __main__.py  api.py  client.py  exceptions.py  models.py  session.py
tests/: test_api.py
