[metadata]
name = filepreviews
version = attr: filepreviews.__version__
author = Jose Padilla
author_email = jpadilla@filepreviews.io
description = Python client library and CLI tool for FilePreviews.io
license = MIT
keywords =
    file
    previews
    thumbnails
    metadata
    exif
    ocr
url = https://github.com/filepreviews/filepreviews-python
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = find:
install_requires =
    requests
    click>=8.0.0,<9.0.0

[options.entry_points]
console_scripts =
    filepreviews = filepreviews.__main__:cli

[options.extras_require]
tests =
    responses
    pytest>=6.0.0,<7.0.0
dev =
    requests
    click>=8.0.0,<9.0.0
    responses
    pytest>=6.0.0,<7.0.0
    pre-commit

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
extend-ignore = E203, E501
